--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,13 @@ android {
         applicationId "xyz.aite.csnet.socksdroid"
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 5
-        versionName "0.6"
+        versionCode 7
+        versionName "0.7"
+        externalNativeBuild {
+            ndkBuild {
+                cppFlags ''
+            }
+        }
     }
     buildTypes {
         release {
@@ -16,6 +21,11 @@ android {
         }
     }
     namespace 'net.typeblog.socks'
+    externalNativeBuild {
+        ndkBuild {
+            path file('src/main/jni/Android.mk')
+        }
+    }
 }
 
 dependencies {
