--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 31
     defaultConfig {
-        applicationId "xyz.aite.csnet.socksdroid"
+        applicationId "xyz.aite.csnetv3.socksdroid"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 5
